--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" >
 </head>
-
 <body>
-<app-root></app-root>
+  <app-root></app-root>
 </body>
 
