--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Profile</title>
+  <title>Victor Palomar - Software Developer</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <!--font-->
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" >
+  <link href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&display=swap" rel="stylesheet">
+  <!--font icons-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet">
+  <!--favicon-->
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="/assets/img/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="/assets/img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="/assets/img/site.webmanifest" rel="manifest">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 
